--- a/index.html
+++ b/index.html
@@ -240,19 +240,19 @@
         </div>
       </article>
 
-      <!-- card-2025-08-13-l-intelligence-artificielle-une-opportunite-economique-a-sai -->
+      <!-- card-2025-08-13-******* -->
       <article class="card">
-        <a class="thumb" href="articles/2025-08-13-l-intelligence-artificielle-une-opportunite-economique-a-sai.html" aria-label="Lire : L'Intelligence Artificielle : Une Opportunité Économique à Saisir">
+        <a class="thumb" href="articles/2025-08-13-article_IA_souveraineté_et_régulation_quelle_voie.html" aria-label="Lire : IA, souveraineté et régulation : quelle voie pour la France et l’Europe ?">
           <img src="images/2025-08-13-l-intelligence-artificielle-une-opportunite-economique-a-sai-hero.jpg" alt="Illustration de l’article">
         </a>
         <div class="card-body">
-          <h2 class="title">L'Intelligence Artificielle : Une Opportunité Économique à Saisir</h2>
-          <p class="excerpt">Résumé court de l’article.</p>
+          <h2 class="title">IA, souveraineté et régulation : quelle voie pour la France et l’Europe ?</h2>
+          <p class="excerpt">L’intelligence artificielle redessine la puissance mondiale. Entre investissements colossaux des États-Unis et de la Chine et dépendance technologique de l’Europe, la France doit choisir : subir ou agir. Découvrez pourquoi l’IA est un enjeu de souveraineté, d’économie et de libertés… et comment nous pouvons encore écrire notre propre futur.</p>
           <div class="meta">
             <span class="badge">Article</span>
             <span>Publié le 13/08/2025</span>
           </div>
-          <a class="link" href="articles/2025-08-13-l-intelligence-artificielle-une-opportunite-economique-a-sai.html">Lire l’article</a>
+          <a class="link" href="articles/2025-08-13-article_IA_souveraineté_et_régulation_quelle_voie.html">Lire l’article</a>
         </div>
       </article>
 
