--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </a>
         <div class="card-body">
           <h2 class="title">IA, souveraineté et régulation : quelle voie pour la France et l’Europe ?</h2>
-          <p class="excerpt">L’intelligence artificielle redessine la puissance mondiale. Entre investissements colossaux des États-Unis et de la Chine et dépendance technologique de l’Europe, la France doit choisir : subir ou agir. Découvrez pourquoi l’IA est un enjeu de souveraineté, d’économie et de libertés… et comment nous pouvons encore écrire notre propre futur.</p>
+          <p class="excerpt">L’intelligence artificielle redessine la puissance mondiale. Subir ou agir, découvrez pourquoi l’IA est un enjeu de souveraineté et comment nous pouvons encore écrire notre propre futur.</p>
           <div class="meta">
             <span class="badge">Article</span>
             <span>Publié le 13/08/2025</span>
