--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- card-2025-08-14-la-montee-des-tensions-geopolitiques-et-les-enjeux-pour-la-f -->
       <article class="card">
         <a class="thumb" href="articles/2025-08-14-la-montee-des-tensions-geopolitiques-et-les-enjeux-pour-la-f.html" aria-label="Lire : La montée des tensions géopolitiques et les enjeux pour la France">
-          <div style="aspect-ratio:16/9;border:1px solid rgba(255,255,255,.08);background:rgba(255,255,255,.03)"></div>
+          <img src="images/Trump_Poutine_Xi.jpg" alt="">
         </a>
         <div class="card-body">
           <h2 class="title">La montée des tensions géopolitiques et les enjeux pour la France</h2>
