--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Accueil – Info Citoyenne</title>
+  <title>INFO-REVEIL – Info Citoyenne</title>
   <style>
     :root{
       --bg:#0f172a;      /* fond général */
