--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <header class="wrap">
-    <h1>Info Citoyenne — Accueil</h1>
+    <h1>INFO-REVEIL – Info Citoyenne</h1>
    
   </header>
 
